tiago - menu principal

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Projetão</h1>
+    <ul>
+        <li>Item de Menu</li>
+        <li>Item de Menu</li>
+        <li>Item de Menu</li>
+    </ul>
 </body>
 </html>
