Heloisa - Versaõ com Rodape

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     <div class="conteudo">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint debitis ducimus repudiandae accusantium tempore earum ea. Voluptas earum repellendus consequuntur sunt officia possimus. Saepe, quos laudantium! Nobis iusto cupiditate aspernatur!</p>
     </div>
+    <div class="rodape">
+        <p>Todos os direitos reservados</p>
+    </div>
 </body>
 </html>
