Tiago - sidebar com botao

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li>Item relacionados</li>
             <li>Item relacionados</li>
         </ul>
+        <button>Saiba mais</button>
     </div>
     <div class="rodape">
         <p>Todos os direitos reservados</p>
