Heloisa - versao com menu no rodape

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     </div>
     <div class="rodape">
         <p>Todos os direitos reservados</p>
+        <ul>
+            <li>Home</li>
+            <li>Contato</li>
+        </ul>
     </div>
 </body>
 </html>
