Heloisa - adicção de endereco

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             <li>Home</li>
             <li>Contato</li>
         </ul>
+        <div>
+            <p>Sao Paulo</p>
+            <p>CEP: xxxxxx</p>
+        </div>
     </div>
 </body>
 </html>
