versao com alteracao do tigo

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li>Contato</li>
         </ul>
         <div>
+            <h2>Endereco</h2>
             <p>Sao Paulo</p>
             <p>CEP: xxxxxx</p>
         </div>
