--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="banner">
+        <img src="" />
+    </div>
+    
     <h1>Projetão</h1>
     <ul>
         <li>Item de Menu</li>
